# juristab-pipeline

./: .gitignore  README.md  pytest.ini  requirements-dev.txt  template.yaml
app/jurisbot/gcp-injestion/caselaw/: main.py  requirements.txt
app/jurisbot/legal-store-chat/: Dockerfile  Dockerfile copy  main.py  requirements.txt
app/jurisbot/legal-store-chat/assets/: style.css
app/jurisbot/legal-store-chat/cache/: cache.db  cache.db-shm  (+1 more)
app/jurisbot/legal-store-search/: main.py  requirements.txt
app/pipeline/service-crawling/crawling/l2-scan/jade.io-caselaw-act/: .coverage  README.md  pyproject.toml
app/pipeline/service-crawling/crawling/l2-scan/jade.io-caselaw-act/config/: sitemap_jade_io.json
app/pipeline/service-crawling/crawling/l2-scan/jade.io-caselaw-act/reports/test-reports/: report.html  report.xml
app/pipeline/service-crawling/crawling/l2-scan/jade.io-caselaw-act/tests/: test_common.py  test_handler.py
app/pipeline/service-crawling/crawling/l2-scan/jade.io-caselaw-act/tests/utils/: test_aws_utils.py
app/sandbox/llama2-runpod/: response.json  test.ipynb
app/sandbox/load-caselaws-embedding/: main.py
app/sandbox/load-embedding/: main.py  requirements.txt
app/sandbox/load-legislation-embedding/: main.py
tests/assets/inputs/: gemini_layout_prompt.json  openai_layout_prompt.txt  test_input.json
tests/services/gemini/: test_gemini_client.py  test_integration_gemini.py
tests/services/openai/: test_integration_openai.py  test_openai_client.py
tests/utils/: test_csv_excel_converter.py  test_html_converter.py  test_pdf_to_image_converter.py
(+345 files in other folders)
